Fix is_char_break issue in pango_default_break function

For most cases, the is_char_break variable should be TRUE.

https://bugzilla.gnome.org/show_bug.cgi?id=789625